[gd_scene load_steps=2 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Space1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Settings"

[node name="Space2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "Disconnect & Exit"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit"

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="PanelContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="SettingsPanel/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="SettingsPanel/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/Panel/VBox"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="ScrollContainer" parent="SettingsPanel/Panel/VBox/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="AudioVBox" type="VBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Spacer1" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="VolumeSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Volume"

[node name="MasterVolumeLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Master Volume: 100%"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
max_value = 100.0
value = 100.0

[node name="HSeparator1" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="VoiceChatSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Voice Chat"

[node name="VoiceVolumeLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Voice Chat Volume: 100%"

[node name="VoiceVolumeSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
max_value = 200.0
value = 100.0

[node name="VoiceRangeLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Voice Range: 20 m"

[node name="VoiceRangeSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
min_value = 5.0
max_value = 50.0
value = 20.0

[node name="MicGainLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Microphone Gain: 100%"

[node name="MicGainSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
min_value = 50.0
max_value = 200.0
value = 100.0

[node name="HSeparator2" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="DevicesSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Audio Devices"

[node name="InputDeviceLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Microphone:"

[node name="InputDeviceOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="OutputDeviceLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Speakers/Headphones:"

[node name="OutputDeviceOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="AudioResetButton" type="Button" parent="SettingsPanel/Panel/VBox/TabContainer/Audio/AudioVBox"]
layout_mode = 2
text = "Reset Audio to Defaults"

[node name="Graphics" type="ScrollContainer" parent="SettingsPanel/Panel/VBox/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GraphicsVBox" type="VBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Spacer1" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="PresetSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Quality Preset"

[node name="PresetOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="HSeparator1" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="AASection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Anti-Aliasing"

[node name="MSAAContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="MSAALabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/MSAAContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MSAA"

[node name="MSAAOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/MSAAContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="TAAContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="TAALabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/TAAContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Temporal AA (TAA)"

[node name="TAACheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/TAAContainer"]
layout_mode = 2

[node name="FXAAContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="FXAALabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/FXAAContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen Space AA (FXAA)"

[node name="FXAACheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/FXAAContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="ScalingSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Resolution & Scaling"

[node name="ScalingModeContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="ScalingModeLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/ScalingModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Upscaling Mode"

[node name="ScalingModeOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/ScalingModeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="RenderScaleLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
text = "Render Scale: 100%"

[node name="RenderScaleSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
min_value = 50.0
max_value = 100.0
value = 100.0

[node name="HSeparator3" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="ShadowSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Shadows & Lighting"

[node name="ShadowContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="ShadowLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/ShadowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shadow Quality"

[node name="ShadowOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/ShadowContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="GISection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Global Illumination"

[node name="SDFGIContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="SDFGILabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SDFGIContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SDFGI (Global Illumination)"

[node name="SDFGICheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SDFGIContainer"]
layout_mode = 2

[node name="SSILContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="SSILLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSILContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSIL (Indirect Lighting)"

[node name="SSILCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSILContainer"]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="SSSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Screen-Space Effects"

[node name="SSAOContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="SSAOLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSAOContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ambient Occlusion (SSAO)"

[node name="SSAOCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSAOContainer"]
layout_mode = 2

[node name="SSRContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="SSRLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSRContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen-Space Reflections"

[node name="SSRCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/SSRContainer"]
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="PostSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Post-Processing"

[node name="TonemapContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="TonemapLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/TonemapContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tone Mapping"

[node name="TonemapOption" type="OptionButton" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/TonemapContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="BloomContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="BloomLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/BloomContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bloom"

[node name="BloomCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/BloomContainer"]
layout_mode = 2

[node name="BloomIntensityLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
text = "Bloom Intensity: 0.80"

[node name="BloomIntensitySlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
max_value = 2.0
step = 0.05
value = 0.8

[node name="VolumetricFogContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="VolumetricFogLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/VolumetricFogContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volumetric Fog"

[node name="VolumetricFogCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/VolumetricFogContainer"]
layout_mode = 2

[node name="HSeparator7" type="HSeparator" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="PerfSection" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Performance"

[node name="FPSCounterContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="FPSCounterLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/FPSCounterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show FPS Counter"

[node name="FPSCounterCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/FPSCounterContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/VSyncContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"

[node name="VSyncCheck" type="CheckBox" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox/VSyncContainer"]
layout_mode = 2

[node name="FPSLimitLabel" type="Label" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
text = "FPS Limit: Unlimited"

[node name="FPSLimitSlider" type="HSlider" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
max_value = 240.0
step = 10.0

[node name="Spacer2" type="Control" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResetButton" type="Button" parent="SettingsPanel/Panel/VBox/TabContainer/Graphics/GraphicsVBox"]
layout_mode = 2
text = "Reset to Defaults"

[node name="Controls" type="ScrollContainer" parent="SettingsPanel/Panel/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ControlsList" type="VBoxContainer" parent="SettingsPanel/Panel/VBox/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Space" type="Control" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="ControlsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
